--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':mylibrary')
+    compile 'com.github.chenpengfei88:RUCooperation:1.0'
 }
