--- a/mylibrary/src/main/AndroidManifest.xml
+++ b/mylibrary/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 
     package="me.free.rucooperation">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
+    <application android:allowBackup="true" android:supportsRtl="true">
 
 
         <receiver android:name=".RUCBroadcastReceiver">
